--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-3 mb-5 p-5">
     <div class="container-fluid pt-5 pb-5 bg-white">
-        <p>
+        <p class="text-break">
             நட்சத்திரத்தை அடிப்படையாக கொண்டு பார்க்கும் வழக்கமான திருமண பொருத்தங்கள் மட்டும்மல்லாமல் ஆண்,பெண் ஜாதகங்களை தனித்தனியாக ஆய்வு  செய்து பொருத்த பலன்களை வழங்குகிறேன்....
         </p>
 
-        <p>
+        <p class="text-break">
             ஆண், பெண் ஜாதகங்களை திருமண பொருத்தங்களுக்காக எங்களுக்கு அனுப்பிய 48 மணி நேரத்திற்குள் பலன் அளிப்பேன்...
         </p>
 
