--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,11 +12,11 @@
             <section class="text-center text-white mt-4">
                 <strong>Contact</strong>
                 <p>
-                    <a href="mailto:rajarojamatrimony@gmail.com">rajarojamatrimony@gmail.com</a>
+                    <a href="mailto:rajarojamatrimony@gmail.com"><i class="fas fa-envelope"></i>&nbsp; rajarojamatrimony@gmail.com</a>
                     <br>
-                    <a href="tel:9344737090" class="text-white">Call now</a>
+                    <a href="tel:9344737090" class="text-white"><i class="fas fa-phone-alt"></i>&nbsp; 9344737090&nbsp;</a>
                     <br>
-                    <a href="https://api.whatsapp.com/send?phone=919994411772">WhatsApp us</a>
+                    <a href="https://api.whatsapp.com/send?phone=919994411772"><i class="fab fa-whatsapp"></i>&nbsp; 9994411772&nbsp;</a>
                 </p>
             </section>
         </div>
