--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -90,3 +90,22 @@ nav h5 {
        display: none;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .prop {
+        display: none;
+    }
+    .desk {
+        display: none;
+    }
+}
+@media screen and (min-width: 700px) {
+    .mob {
+        display: none;
+    }
+}
+@media screen and (max-width: 295px) {
+    .brand {
+        margin-right: 0;
+    }
+}
