--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,17 @@
 <nav class="navbar navbar-expand-md contact">
-    <p class="text-white mb-0"><strong>Prop: RajaSimman, Astrologer</strong></p>
+    <p class="text-white mb-0 prop"><strong>Prop: RajaSimman, Astrologer</strong></p>
+    <div class="mob text-white">
+        <p class="mb-0">
+            <strong> 
+                <a href="tel:9344737090" class="text-white"><i class="fas fa-phone-alt"></i>&nbsp; 9344737090</a>
+            </strong>
+        </p>
+    </div>
     <div class="ml-auto text-white">
         <p class="mb-0">
             <strong> 
-                <a href="tel:9344737090" class="text-white">Contact: 9344737090</a>
-                <a href="mailto:rajarojamatrimony@gmail.com" class="text-white">&nbsp;&nbsp; rajarojamatrimony@gmail.com</a>
+                <a href="tel:9344737090" class="desk text-white"><i class="fas fa-phone-alt"></i>&nbsp; 9344737090</a>
+                <a href="mailto:rajarojamatrimony@gmail.com" class="text-white">&nbsp;<i class="fas fa-envelope"></i> rajarojamatrimony@gmail.com</a>
             </strong>
         </p>
     </div>
@@ -12,15 +19,14 @@
 <nav class="navbar navbar-expand-md main">
     <!-- Brand -->
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-            <img src="assets/images/logo.png" width="75" class="img-responsive d-inline-block rounded" alt="">
+        <a class="navbar-brand brand" href="#">
+            <img src="assets/images/logo.png" width="60" class="img-responsive d-inline-block rounded" alt="">
         </a>
     </div>    
-    <h4 class="text-white mx-auto text-center">
+    <h4 class="text-white mx-auto text-center mt-2">
         <strong>RajaRoja</strong><br>
         Matrimony
     </h4>
-    
     
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler rounded" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -111,7 +117,7 @@
                         <div class="modal-footer">
                             <a class="nav-link mr-auto" data-target="#reset-modal" data-toggle="modal" data-dismiss="modal">Forgot password?</a>
                             <button type="button" class="btn btn-secondary" id="cancel-login" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" (click)='onSubmit()' routerLink="/home" data-dismiss="modal">Submit</button>
+                            <button type="submit" class="btn btn-primary" (click)='onSubmit()' data-dismiss="modal">Submit</button>
                         </div>
                     </div>
                 </div>
