--- a/src/app/profiles/profiles.component.css
+++ b/src/app/profiles/profiles.component.css
@@ -1,17 +1,17 @@
 @media screen and (max-height: 570px) {
     .card img {
-        height: 100px;
+        height: 200px;
     }
 }
 
 @media screen and (min-height: 571px) and (max-height: 670px) {
     .card img {
-        height: 110px;
+        height: 240px;
     }
 }
 @media screen and (min-height: 671px) and (max-height: 840px) {
     .card img {
-        height: 100px;
+        height: 250px;
     }
 }
 @media screen and (min-height: 841px) and (max-height: 1025px) {
@@ -24,12 +24,16 @@
         height: 250px;
     }
 }
-@media screen and (min-width:1025px) {
+@media screen and (min-width: 1025px) {
     .card img {
-        height:300px;
+        height:350px;
     }
 }
-
+@media screen and (min-width: 445px) and (max-width: 460px) and (min-height: 570px) and (max-height: 620px) {
+    .card img {
+        height: 280px;
+    }
+}
 
 @media screen and (min-width: 760px) and (max-width: 1000px) {
     .form-ele {
